--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "11.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "styled-jsx": "^4.0.0"
+    "styled-jsx": "^4.0.0",
+    "sync-request": "^6.1.0"
   },
   "devDependencies": {
     "eslint": "7.32.0",
