--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "11.1.0",
+    "gray-matter": "^4.0.3",
+    "highlight.js": "^11.2.0",
+    "marked": "^3.0.7",
+    "next": "^11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "styled-jsx": "^4.0.0",
