--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "highlight.js": "^11.2.0",
     "marked": "^3.0.7",
     "next": "^11.1.2",
+    "next-auth": "^4.0.0-beta.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "styled-jsx": "^4.0.0",
