--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-GITHUB_ID=Iv1.eed992182e96476f
-GITHUB_SECRET=01021cc3761cc937754a93fcc5e4383c78ab0fd1
+DOMAIN=http://localhost:3000
+
+GITHUB_ID=cd75af4936fd540fd2d7
+GITHUB_SECRET=a40deab7e64b1c1d4462041fd28a0be5cc15a0b8
