--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "formidable": "^1.2.2",
     "gray-matter": "^4.0.3",
     "highlight.js": "^11.2.0",
     "marked": "^3.0.7",
     "next": "^11.1.2",
     "next-auth": "^4.0.0-beta.4",
+    "octokit": "^1.7.0",
+    "octokit-plugin-create-pull-request": "^3.9.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "styled-jsx": "^4.0.0",
