--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@codemirror/lang-markdown": "^0.19.1",
     "@codemirror/language-data": "^0.19.0",
+    "@elastic/elasticsearch": "^7.15.0",
     "@uiw/react-codemirror": "^4.1.0",
     "formidable": "^1.2.2",
     "fs": "^0.0.1-security",
